<resources>
    <string name="app_name">CafeteriasAdmin</string>
    <string name="google_place_Api">AIzaSyDpyz8mfmGCMD8yvcixNRYyPmwfwYRGA7o</string>

    <!-- Connection -->
    <string name="connect_internet">Please Check Your Internet Connection </string>
    <string name="connect_internet_slow">There is Problem With The Internt Connection </string>
    <string name="loading">Loading</string>
    <string name="wait">Please Wait ....</string>
    <string name="try_agin">Try Again</string>
    <string name="ok"> OK</string>
    <string name="error">Error</string>
    <string name="servererror">Somthing went wrong please try again later</string>

    <!-- Login -->
    <string name="phone_hint">Phone Number</string>
    <string name="lock_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="phone_number_empty">Enter Phone Number</string>
    <string name="password_empty">Enter Password</string>
    <string name="password_check">Please Enter Password Minimum In 8 Char !</string>
    <string name="phone_valid">Please Enter Valid Phone Number !</string>

    <!--Main -->
    <string name="cafeteria_registeration">Registeration</string>
    <string name="users_view">Users</string>
    <string name="settings">Settings</string>

    <!--Cafeterias Registeration -->
    <string name="username_cr">UserName</string>
    <string name="cafeteria_cr">Name of Cafeteria</string>
    <string name="phone_cr">Phone Number</string>
    <string name="password_cr">Password</string>
    <string name="password_confirm_cr">Password Confirm</string>
    <string name="location_cr">Location</string>
    <string name="sub_expiry_date_cr">Subscription Expiration Date</string>
    <string name="username_cr_empty">Enter UserName</string>
    <string name="cafeteria_cr_empty">Enter Name of Cafeteria</string>
    <string name="phone_cr_empty">Enter Phone Number</string>
    <string name="password_cr_empty">Enter Password</string>
    <string name="password_confirm_cr_empty">Enter Password Confirm</string>
    <string name="location_cr_empty">Enter Location</string>
    <string name="sub_expiry_date_cr_empty">Enter Subscription Expiration Date</string>
    <string name="password_similarity">Please Verity The Password Is Similar !</string>
    <string name="cafeteria_registeration_btn">Registeration</string>
    <string name="cafeteria_registeration_successfully">Successfully Registered !</string>
    <string name="cafeteria_ok">Ok</string>


    <!-- View Users -->
    <string name="empty_vu">There is no Data</string>
    <string name="active_vu">Active</string>
    <string name="nonactive_vu">NonActive</string>
    <string name="search_vu">Enter Name Or Cafeteria Or Phone </string>
    <string name="macAddress_vu">MacAddress</string>
    <string name="addeddate_vu">Added Date:</string>
    <string name="active_status_vu">Account Activated To</string>
    <string name="nonactive_status_vu">Account Deactivated To</string>
    <string name="remove_mac_massage">Do You Want To Remove MacAddress</string>
    <string name="Done_remove_mac_massage">Has Been Remove MacAddress</string>


    <!--Settings -->
    <string name="actionbar_setting">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>

    <!-- Notifications -->
    <string name="actionbar_notification">Notifications</string>
    <string name="actionbar_view_notification"> Notifications View</string>
    <string name="edit_notification">Edit Notification</string>
    <string name="edit_notification_btn">Edit</string>
    <string name="edit_notification_successfully">Edit Successfully !</string>
    <string name="remove_notification">Do You Want To Remove Notification</string>
    <string name="Done_remove_notification">Has Been Remove Notification</string>

    <!--Add Notifications -->
    <string name="actionbar_add_notification">Add Notification</string>
    <string name="title">Title</string>
    <string name="notification">Notification</string>
    <string name="title_empty">Enter Title</string>
    <string name="notification_empty">Enter Notification</string>
    <string name="notification_btn">Send</string>
    <string name="notification_successfully">Send Successfully !</string>

    <!--Edit Profile-->
    <string name="actionbar_edit_profile">Edit Profile</string>
    <string name="username_edit_profile">UserName</string>
    <string name="phone_number_edit_profile">Phone Number</string>
    <string name="username_edit_profile_empty">Enter UserName</string>
    <string name="phone_number_edit_profile_empty">Enter Phone Number</string>
    <string name="check_username_length_edit_profile">You Can not Enter More than 40 Characters !</string>
    <string name="phone_number_edit_profile_valid">Please Enter Valid Phone Number !</string>
    <string name="edit">Edit</string>
    <string name="edit_successfully">Edited Successfully !</string>


    <!--Session-->
    <string name="session_summary">Session Summary</string>
    <string name="login_time">Login Time :</string>
    <string name="logout_time">Logout Time :</string>
    <string name="close">Close</string>

    <!--Edit Users Profile -->
    <string name="actionbar_edit_users_profile">Edit Date</string>
    <string name="editpassword">Forgen Password</string>
    <!-- logout massage -->
    <string name="logout_hidder">Logout</string>
    <string name="logout_content"> Do You Want To Logout ? </string>
    <string name="logout_sure">Confirm</string>
    <string name="logout_cancle">Cancle</string>

</resources>
