<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.ViewUsers">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:drawableStart="@drawable/ic_total"
                android:drawablePadding="@dimen/_3sdp"
                android:textSize="@dimen/_10ssp"
                android:layout_margin="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/active"
                android:text="@string/active_vu"
                android:textColor="@color/greann"
                android:layout_margin="@dimen/_10sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notactive"
                android:textColor="@color/red"
                android:text="@string/nonactive_vu"
                android:layout_margin="@dimen/_10sdp"
                />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            tools:ignore="MissingConstraints">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/search"
                android:inputType="textPersonName"
                android:hint="@string/search_vu"
                android:textSize="@dimen/_12ssp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@drawable/background_ed"
                android:textAlignment="viewStart"
                />
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:id="@+id/rectable"/>
    </LinearLayout>
    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/empty_vu"
        android:textColor="@color/black"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:visibility="gone"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnconnection"
            android:layout_gravity="center"
            android:text="@string/try_agin"
            android:visibility="gone"
            android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>