<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.EditUsersProfile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:id="@+id/ed_username"
                    android:inputType="text"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/username_cr"
                    android:maxLength="45"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:id="@+id/ed_cafeteria_restaurant"
                    android:inputType="text"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/cafeteria_cr"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_cafeteria_restaurant"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:id="@+id/ed_phone_number"
                    android:inputType="number"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/phone_cr"
                    android:maxLength="10"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:id="@+id/ed_location"
                    android:inputType="text"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/location_cr"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_date"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/onumedium"
                        android:drawablePadding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_16sdp"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:hint="@string/sub_expiry_date_cr"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/onumedium"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="MissingConstraints">
                <Button
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:text="@string/edit"
                    app:fontFamily="@font/onumedium"
                    android:id="@+id/edituserprofile_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_login_btn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="btn_edit"
                    tools:ignore="OnClick" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>