<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/alertdialog_background"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@drawable/alertdialog_background"
        android:paddingBottom="10dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/alertdialog_background"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="right"
                android:id="@+id/cancle"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_cancle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/onumedium"
                android:textColor="@color/black"
                android:text="@string/edit_notification"
                android:gravity="center"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:id="@+id/ed_title"
                    android:inputType="text"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/title"
                    android:maxLength="45"
                    android:textSize="@dimen/_14ssp"
                    android:drawableStart="@drawable/ic_title"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="MissingConstraints">
                <EditText
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:id="@+id/ed_noitifcation"
                    android:inputType="textMultiLine"
                    android:layout_gravity="top"
                    android:gravity="top"
                    app:fontFamily="@font/onumedium"
                    android:hint="@string/notification"
                    android:textSize="@dimen/_14ssp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:background="@drawable/background_ed"
                    android:textAlignment="viewStart"
                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_36sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="MissingConstraints">
                <Button
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:text="@string/edit"
                    app:fontFamily="@font/onumedium"
                    android:id="@+id/edit_notification_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_login_btn"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="btn_login"
                    tools:ignore="OnClick" />
            </androidx.cardview.widget.CardView>
        </LinearLayout >
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>